--- a/app/assets/stylesheets/help.scss
+++ b/app/assets/stylesheets/help.scss
@@ -14,7 +14,7 @@
     .hero_about{
     	color: #fff;
     	padding: 150px 0;
-    	background: #85889b url("crowd.png");
+    	background: #85889b asset-url("crowd.png");
     	background-blend-mode: multiply;
     	background-repeat: no-repeat;
     	background-attachment: fixed;
