--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *
  *= require bootstrap
+ *= require font-awesome
  *= require easy-autocomplete
  *= require easy-autocomplete.themes
  *= require_tree .
