--- a/app/views/layouts/_mobilenav.html.erb
+++ b/app/views/layouts/_mobilenav.html.erb
@@ -14,7 +14,7 @@
           <li class="nav-item dropdown text-end mdrop" data-bs-behavior="notifications">
             <a class="dropdown-toggle nav-link n" type="button" id="Notificationmenu" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false" data-behavior="notifications-link">
               <div class="nwr">
-                <i class="fas fa-bell nav-f"></i>
+                <i class="fas fa-bell nav-f nav-i"></i>
                 <span class="ntwr" data-behavior="unread">
                   <span class="nt"></span> 
                 </span>   
