--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -123,7 +123,9 @@
 			.pai{
 				width: 15%;
 				border-radius: 50%;
-				
+				button{
+					color: inherit;
+				}
 			}
 			.pat{
 				width: 25%;
@@ -194,11 +196,11 @@
 			padding: 0;
 		}
 		::-webkit-scrollbar {
-		  height: 2px;              /* height of horizontal scrollbar ← You're missing this */
+		  height: 2px;         
 		}
 	}
 	.fa-ellipsis-v {
-	    padding: 0.645em 0.957em;
+	    // padding: 0.645em 0.957em;
 	}
 }
 .pdrop-btn{
@@ -458,6 +460,7 @@
 					.fa-thumbs-up{
 					
 					    &:hover {
+					    	color: #7a8dff;
 						    // filter: invert(78%) sepia(13%) saturate(643%) hue-rotate(208deg) brightness(102%) contrast(102%); 
 						    filter: invert(78%) sepia(28%) saturate(726%) hue-rotate(202deg) brightness(102%) contrast(102%);
 						}
@@ -465,6 +468,7 @@
 					.fa-thumbs-down{
 						
 					    &:hover {
+					    	color: #7a8dff;
 						    // filter: invert(78%) sepia(13%) saturate(643%) hue-rotate(208deg) brightness(102%) contrast(102%); 
 						    filter: invert(78%) sepia(28%) saturate(726%) hue-rotate(202deg) brightness(102%) contrast(102%);
 						}
