--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -45,20 +45,20 @@
       height: 18px;
     }
     span{
-      line-height: 18px;
+      line-height: 1.2;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      margin-left: 10px;
     }
     // &:active{
     //   opacity: 1 !important;
     //   background-color: #d1cbf5;
     // }
   }
-  i{
+  i, svg{
     font-size: 18px;
-    width: 20px;
-    margin-right: 10px;
+    width: 20px !important;
     text-align: left;
   }
 }
@@ -277,13 +277,16 @@ i{
 }
 .fa-ellipsis-v{
   opacity: .7;
+  color: #657786;
   transition: all 350ms ease;
 }
 
+.svg-inline--fa{
+  vertical-align: middle;
+}
 .border-def{
   border-color: #ecebfb !important;
 }
-
 
 .popover{
   min-width: 250px;
@@ -546,7 +549,7 @@ i{
         font-size: 20px;
       }
       span{
-        line-height: 20px;
+        line-height: 1.2;
       }
       &:focus {
         background-color: unset;
