--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,25 +15,25 @@
       <ul class="nav-fill">
         <li class="nav-item">
           <%= link_to posts_path, class: "nav-link #{'fil' if current_page?(posts_path)} #{'disabled' if current_user.profile.isdisabled}" do %>
-            <i class="fas fa-home"></i>
+            <i class="fas fa-home nav-i"></i>
             <p>Home</p>
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to matches_path, class: "nav-link #{'fil' if current_page?(matches_path)} #{'disabled' if current_user.profile.isdisabled}" do %>
-            <i class="fas fa-search"></i>
+            <i class="fas fa-search nav-i"></i>
             <p>Search</p>
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to new_post_path, class: "nav-link nav-f #{'disabled' if current_user.profile.isdisabled}", remote: true, data: { "bs-toggle": "modal", "bs-target": "#postModal"} do %>
-            <i class="fas fa-plus-circle"></i>
+            <i class="fas fa-plus-circle nav-i"></i>
             <p>Post</p>
           <% end %>
         </li>
         <li class="nav-item">
           <%= link_to conversations_path, class: "nav-link #{'fil' if current_page?(conversations_path) || (@conversation && current_page?(conversation_path(@conversation)))} #{'disabled' if current_user.profile.isdisabled}" do %>
-            <i class="fas fa-inbox"></i>
+            <i class="fas fa-inbox nav-i"></i>
             <p>Inbox</p>
           <% end %>
         </li>
@@ -41,7 +41,7 @@
         <li class="nav-item dropdown mobd text-end nmd" data-behavior="notifications">
           <a class="dropdown-toggle nav-link n <%= 'disabled' if current_user.profile.isdisabled %>" type="button" id="Notificationmenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="" data-behavior="notifications-link"> 
             <div class="nwr">
-              <i class="fas fa-bell"></i>
+              <i class="fas fa-bell nav-i"></i>
               <span class="ntwr" data-behavior="unread">
                 <span class="nt"></span>
               </span>   
