--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -182,7 +182,7 @@
 			}
 		}
 		.react-icon{
-			background-image: url(thinking_v2.png);
+			background-image: asset-url("thinking_v2.png");
 		    background-size: contain;
 		    background-repeat: no-repeat;
 		    display: inline-block;
