--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -21,12 +21,12 @@
       </div>
       <div class="col-1 p-0">
         <div class="p-0 text-end hspan pdrop"> 
-          <button class="pdrop-btn post-desk-menu" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-            <i class="fas fa-ellipsis-v rounded-circle"></i>
+          <button class="pdrop-btn post-desk-menu el-dr-btn" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+            <i class="fas fa-ellipsis-v"></i>
           </button>
 
-          <a class="post-mob-menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMobile" role="button">
-            <i class="fas fa-ellipsis-v rounded-circle"></i>
+          <a class="post-mob-menu el-dr-btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMobile" role="button">
+            <i class="fas fa-ellipsis-v"></i>
           </a>
       
           <ul class="dropdown-menu post-dropdown p-0">
