--- a/app/views/dashboard/welcome.html.erb
+++ b/app/views/dashboard/welcome.html.erb
@@ -19,14 +19,14 @@
 
     <div class="about_section">
       <p class="w-st">Be yourself</p>
-      <p class="w-ti">Social media has become a place where users feel pressured to be perfect. We know perfect doesn't exist, that's why you're encouraged to be the real you here at Trummi. By upholding the spirit of honesty, positivity and transparency, we can work together towards creating a new normal for what social media should be.</p>
+      <p class="w-ti">Social media has become a place where users feel pressured to be perfect. We know perfect doesn't exist, that's why you're encouraged to be the real you here at Trummi. Trummi offers a safe place where everyone can be themselves.</p>
     </div>
   </div>
 
   <div class="panel d-flex" id="Tags">
     <div class="about_section">
       <p class="w-st">Meet others just like you</p>
-      <p class="w-ti">Use tags to describe yourself, your interests and ideas, or anything important to you. You will only be visible to anyone using the same tags as you so feel free to be yourself!</p>
+      <p class="w-ti">Use tags to describe yourself, your interests and ideas, or anything important to you. Trummi matches users when they share one or more tags so you're guaranteed to meet others you have things in common with!</p>
 
       <%= image_tag('tags.png', class: 'p-tags') %>
     </div>
@@ -45,7 +45,7 @@
   <div  class="panel d-flex" id="Kid-safe">
     <div class="about_section">
       <p class="w-st">A safe place for kids</p>
-      <p class="w-ti">Trummi is committed to providing a safe place for kids by ensuring their profile is only visible to other kids.  Kids are free to be kids!</p>
+      <p class="w-ti">Trummi is committed to providing a safe place for kids, that's why they will only match with other kids. Kids are free to be kids!</p>
     </div>
     
     <div class="about_img">
@@ -64,7 +64,7 @@
     
     <div class="about_section">
       <p class="w-st">With more ways to interact</p>
-      <p class="w-ti">React with memes! Use popular memes to show how you really feel. You're no longer limited to likes and dislikes.</p>
+      <p class="w-ti">React with memes! Use popular memes to show others how you really feel. You're no longer limited to likes and dislikes.</p>
       <%= image_tag('reaction_clip.png') %>
     </div>
   </div>
