--- a/app/views/personal_messages/_form.html.erb
+++ b/app/views/personal_messages/_form.html.erb
@@ -12,7 +12,7 @@
 	        <% end %>
 		</div>
 	</div>
-	<div class="col-9 p-0 pm-h">
+	<div class="col-9 pm-h">
 		<p class="mb-0 text-capitalize"><strong><%= @receiver.name %></strong></p>
 		<!-- <p class="mb-0"><small>@<%= @receiver.username %></small></p> -->
 	</div>
