--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1036,7 +1036,7 @@ h1 {
 		}
 		.info-wrapper{
 			padding-bottom: 100px;
-			padding-top: 30px;
+			padding-top: 40px;
 			border-top-left-radius: 15px;
 	    	border-top-right-radius: 15px;
 	    	&:before{
@@ -1046,7 +1046,7 @@ h1 {
       			height: 8px;
 			    position: absolute;
 			    left: 50%;
-			    top: 12px;
+			    top: 16px;
 			    transform: translate(-50%, 0);
 			    border-radius: 4px;
 			}
@@ -1059,7 +1059,7 @@ h1 {
 		width: 100%;
 		height: auto;
 		background: #ffffff;
-		padding-top: 30px;
+		padding-top: 40px;
 		border-top-left-radius: 15px;
     	border-top-right-radius: 15px;
     	// 
@@ -1076,7 +1076,7 @@ h1 {
 			    height: 8px;
 			    position: absolute;
 			    left: 50%;
-			    top: -18px;
+			    top: -24px;
 			    transform: translate(-50%, 0);
 			    border-radius: 4px;
 			}
@@ -1095,7 +1095,7 @@ h1 {
 		padding-bottom: 130px;
 		z-index: 20;
 		background: #ffffff;
-		padding-top: 30px;
+		padding-top: 40px;
 		border-top-left-radius: 15px;
     	border-top-right-radius: 15px;
     	.sect-wr{
@@ -1106,7 +1106,7 @@ h1 {
 			    height: 8px;
 			    position: absolute;
 			    left: 50%;
-			    top: 12px;
+			    top: 16px;
 			    transform: translate(-50%, 0);
 			    border-radius: 4px;
 			}
@@ -1127,11 +1127,14 @@ h1 {
 			display: none;
 			border-top: 0;
 			.row{
+				.rt-section-header{
+					margin-bottom: 10px;
+				}
 				.rt-section-images{
 					.pr-img{
 	    			height: 30vw;
 			  		border-radius: 0;
-			  	}
+			  		}
 				}
 			}
 		}
