--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -19,11 +19,11 @@
     </div>  
 
     <div class="p-0 text-end hspan pdrop"> 
-      <button class="pdrop-btn post-desk-menu" data-bs-toggle="dropdown" data-bs-backdrop="true" data-bs-display="static" aria-expanded="false">
+      <button class="pdrop-btn post-desk-menu el-dr-btn" data-bs-toggle="dropdown" data-bs-backdrop="true" data-bs-display="static" aria-expanded="false">
         <i class="fas fa-ellipsis-v rounded-circle"></i>
       </button>
       
-      <a class="post-mob-menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMobile" role="button">
+      <a class="post-mob-menu el-dr-btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMobile" role="button">
         <i class="fas fa-ellipsis-v rounded-circle"></i>
       </a>
 
