--- a/app/views/profiles/_rightcontainer.html.erb
+++ b/app/views/profiles/_rightcontainer.html.erb
@@ -5,11 +5,11 @@
       <div class="row fw-header">
         <div class="col-12 px-1">
           <ul class="nav" id="myTab" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active py-1 px-2" id="following-tab" data-bs-toggle="tab" href="#following" role="tab" aria-controls="following" aria-selected="true"><strong>Following <%= @profile.following.count %></strong></a>
+            <li class="nav-item w-50">
+              <a class="nav-link active py-1 px-2 text-center" id="following-tab" data-bs-toggle="tab" href="#following" role="tab" aria-controls="following" aria-selected="true"><strong>Following <%= @profile.following.count %></strong></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link py-1 px-2" id="followers-tab" data-bs-toggle="tab" href="#followers" role="tab" aria-controls="followers" aria-selected="false"><strong>Followers <%= @profile.followers.count %></strong></a>
+            <li class="nav-item w-50">
+              <a class="nav-link py-1 px-2 text-center" id="followers-tab" data-bs-toggle="tab" href="#followers" role="tab" aria-controls="followers" aria-selected="false"><strong>Followers <%= @profile.followers.count %></strong></a>
             </li>
           </ul>
         </div>
