--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -697,7 +697,7 @@ i{
 }
 .post-btn{
 	// background-color: rgba(29,161,242,1.00);
-	background-color: #6a7bff;
+	background-color: #6a7bff !important;
 	color: white !important;
 	border-radius: 999px;
 	opacity: .5;
