--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -345,7 +345,7 @@
   
   <div class="row my-5">
     <div class="col-12 p-0" align="center">
-      <%= f.button "Update Profile", class: "post-btn rounded-pill", data: {bs_disable_with: "<i class='fas fa-spinner'></i> Updating..."} %>
+      <%= f.button "Update Profile", class: "post-btn rounded-pill", data: {disable_with: "<i class='fas fa-spinner'></i>"} %>
     </div>
   </div>
   
