--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -108,11 +108,9 @@
 	background: rgba(0, 0, 0, 0.1);
 	margin: auto;
 	.pco{
-
 		overflow: hidden;
 	}
 	a{
-		// height: 100%;
 		.card-img-top{
 			height: 100%;
 			width: 100%;
@@ -132,7 +130,8 @@
 		.profile-name{
 			position: absolute;
 			bottom: 8px;
-			left: 10px;
+			left: 0;
+			padding: 0 12px;
 			font-size: 14px;
 			color: #ffffff;
 			margin: 0;
@@ -1117,6 +1116,11 @@ h1 {
 			.rt-section-follow{
 				.follow-wr{
 					height: 30vw;
+					.profile-container{
+						.profile-name{
+							font-size: inherit;
+						}
+					}
 				}
 			}
 			.friendsTab{
