--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1275,7 +1275,8 @@ textarea{
 		.confirm-item{
 			border-top: 1px solid rgb(239, 243, 244) !important;
 			&:active{
-				background-color: #eeebff;
+				// background-color: #eeebff;
+				background-color: #f2f6ff;
 			}
 		}
 	}
