--- a/app/views/dashboard/welcome.html.erb
+++ b/app/views/dashboard/welcome.html.erb
@@ -12,6 +12,20 @@
     </div>
 	</div>
 
+  <div class="panel d-flex" id="Welcome-intro">
+    <div class="intro_about m-auto">
+      <div class="intro-a-mb">
+        <p class="w-st">A different kind of social media platform</p>
+
+        <p class="w-ti">Unlike other social media apps where users feel pressured into posting the perfect selfie or portraying a perfect life, you're only encouraged to be the true you here at Trummi. Trummi aims to be a safe place where everyone can be themselves.</p>
+      </div>
+
+      <p class="w-ti wti-b w-small">
+        <strong>Break free from unrealistic expectations to be perfect.</strong>
+      </p>
+    </div>
+  </div>
+
   <div class="panel d-flex" id="Self-love">
     <div class="about_img">
       <%= image_tag('self_love.png') %>
@@ -19,7 +33,7 @@
 
     <div class="about_section">
       <p class="w-st">Be yourself</p>
-      <p class="w-ti">Social media has become a place where users feel pressured to be perfect. We know perfect doesn't exist, that's why you're encouraged to be the true you here at Trummi. Trummi offers a safe place where everyone can be themselves.</p>
+      <p class="w-ti">Trummi is all about self love. By being the true you, you'll meet other real people who share similiar interests and ideas. You decide how open you want to be.</p>
     </div>
   </div>
 
@@ -45,7 +59,7 @@
   <div  class="panel d-flex" id="Kid-safe">
     <div class="about_section">
       <p class="w-st">A safe place for kids</p>
-      <p class="w-ti">Trummi is committed to providing a safe place for kids, that's why they will only match with other kids. Kids are free to be kids!</p>
+      <p class="w-ti">Trummi is committed to providing a safe space for kids, that's why all users under the age of 18 will never match with adults. Kids are free to be kids!</p>
     </div>
     
     <div class="about_img">
