--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -283,9 +283,9 @@
 }
 .post-dropdown{
 	position: fixed !important;
-    top: 50% !important;
+    top: 35% !important;
     left: 50% !important;
-    transform: translate(-50%, -50%) !important;
+    transform: translate(-50%, -1%) !important;
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15) !important;
 	border: 1px solid #efefef !important;
 	font-size: 16px;
@@ -722,6 +722,13 @@
 	}
 	.post-dropdown{
 		font-size: 18px;
+	}
+
+	.imgwr{
+		.header-img{
+			width: 26px;
+			height: 26px;
+		}
 	}
 
 	#top-replies{
