--- a/app/views/dashboard/welcome.html.erb
+++ b/app/views/dashboard/welcome.html.erb
@@ -4,7 +4,7 @@
 	<div class="panel" id="Welcome">
     <div class="w_t-wr">
       <p class="w-st">Trummi</p>
-      <p class="w-ti">Be your <strong>true</strong> self</p>
+      <p class="w-ti">Be your<span class="welcome-hero-b"><strong>true</strong></span>self</p>
     </div>
 		
     <div class="wo-next" align="center">
